--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p>Bạn sẽ đến tham dự chứ?</p>
             </div>
         <div class="main-sticker">
-            <img src="src\assets\main-stk.webp" alt="Wanna Date?">
+            <img src="src/assets/stk.png" alt="Wanna Date?">
         </div>
         <div class = "buttons">
           <button class="btn" id = "yesButton" onclick="nextPage('yes')">Chắc chắn</button>
