--- a/src/no.html
+++ b/src/no.html
@@ -12,6 +12,7 @@
              <h1>Chúng tôi hiểu bạn có lí do riêng...
         
         nhưng nếu có thể hãy dành chút thời gian nhé?  </h1>
+            <h1> Thời gian: 10h ngày 05/01/2024!</h1>
         </pre>
     </div>
 </body>
