--- a/src/yes.html
+++ b/src/yes.html
@@ -94,7 +94,9 @@
   </head>
   <body>
   <div class="back"></div>
-  <h1>Mong chờ sự xuất hiện của bạn!</h1>
+  <h1>Mong chờ sự xuất hiện của bạn!
+ 
+    Thời gian: 10h ngày 05/01/2024 </h1>
   <div class="heart"></div>
   <canvas id="confeti" width="300" height="300" class="active"></canvas>
   <script src="yes.js"></script>
